--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i>@igkhan1710@gmail.com</p>
+                    <p><i class="fa-solid fa-paper-plane"></i>igkhan1710@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>9748934665</p>
                     <a href="docs/Resume_Imam Ghazi Khan.pdf" download class="btn btn2 btn3">Download CV</a>
                 </div>
