--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>Android and Web developer</p>
+                <br>
                 <h1>Hi, I'm Imam <br><span>Ghazi</span> Khan from India</h1>
             </div>
         </div>
@@ -48,8 +49,8 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Android development</span><br>Java,Kotlin</li>
-                            <li><span>Web development</span><br>HTML,CSS,javascript</li>
+                            <li><span>Android development</span><br>Java8, Kotlin</li>
+                            <li><span>Web development</span><br>HTML, CSS, javaScript</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
